# FogBugz-MCP

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
python/: pyproject.toml
python/src/fogbugz_mcp/: fogbugz_client.py  server.py  types.py
python/src/fogbugz_mcp/tools/: assign_case.py  close_case.py  create_case.py  edit_case.py  get_case.py  get_case_comments.py  list_people.py  reopen_case.py  resolve_case.py  search_cases.py
python/tests/: test_fogbugz_client.py  test_tools.py
src/: index.ts  types.ts
src/tools/: close-case.ts  get-case.ts  list-people.ts  resolve-case.ts
tests/: fogbugz-client.test.ts
ts/: package-lock.json  package.json
ts/src/: fogbugz-client.ts  index.ts
ts/src/tools/: assign-case.ts  create-case.ts  edit-case.ts  get-case-comments.ts  reopen-case.ts  search-cases.ts
ts/tests/: fogbugz-client.test.ts  tools.test.ts
