[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fogbugz-mcp"
version = "1.0.0"
description = "MCP server for FogBugz (Manuscript) – search cases, view details, manage lifecycle, and more."
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Bardia Barabadi" }]
keywords = ["mcp", "fogbugz", "manuscript", "cursor", "claude"]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
fogbugz-mcp = "fogbugz_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fogbugz_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
